--- a/product/freetrial/kinder.html
+++ b/product/freetrial/kinder.html
@@ -37,7 +37,7 @@
 <div class="wrapper">
     <!--S:header-->
     <header class="header font_black">
-        <a href="/"><img src="/images/logo.png" alt="Egg School"></a>
+        <a href="/"><img src="../../images/logo.png" alt="Egg School"></a>
         <nav class="gnb_wrapper">
             <ul class="gnb_block">
                 <li class="gnb_link"><span class="gnb_text">Egg School</span>
@@ -88,7 +88,7 @@
     </header>
     <!--S:mobile-->
     <header class="m_header font_black">
-        <div class="logo"><a href="/"><img src="/images/logo.png" alt="Egg School"></a></div>
+        <div class="logo"><a href="/"><img src="../../images/logo.png" alt="Egg School"></a></div>
         <div class="m_menu_block">
             <div class="utill_menu_block">
                 <button type="button" onclick="redirectToAppStore()" class="utill_menu">앱 다운로드</button>
@@ -104,7 +104,7 @@
     <div class="m_nav_wrapper">
         <div class="nav_top d_flex align_center">
             <div class="login_block">
-                <img class="logo" src="/images/logo.png" alt="Egg School">
+                <img class="logo" src="../../images/logo.png" alt="Egg School">
                 <p class="login_txt"><a href="/login" class="font_600">로그인</a>해주세요</p>
             </div>
             <button class="btn_nav open" onclick="handleMobileNav(this)">
@@ -172,7 +172,7 @@
                     </p>
                 </div>
                 <div class="char_img_block">
-                    <img src="/images/product/freetrial/kinder/char_freetrial_kinder.png" alt="">
+                    <img src="../../images/product/freetrial/kinder/char_freetrial_kinder.png" alt="">
                 </div>
             </div>
         </section>
@@ -204,7 +204,7 @@
                                 장난감을 정리하고 집으로 갈 준비를 해요.
                             </p>
                             <div class="thumb_block">
-                                <img src="/images/product/freetrial/kinder/img_component_prek.png" loading="lazy" alt="">
+                                <img src="../../images/product/freetrial/kinder/img_component_prek.png" loading="lazy" alt="">
                             </div>
                             <p class="dot_desc">
                                 교재 1권, 활동자료 (숨은그림찾기, 그림판)<br />
@@ -223,7 +223,7 @@
                                 냅킨으로 흘린 음식을 스스로 닦을 수 있어요.
                             </p>
                             <div class="thumb_block">
-                                <img src="/images/product/freetrial/kinder/img_component_k.png" loading="lazy" alt="">
+                                <img src="../../images/product/freetrial/kinder/img_component_k.png" loading="lazy" alt="">
                             </div>
                             <p class="dot_desc">
                                 교재 1권, 활동자료 (에그스쿨 냅킨)<br />
@@ -246,7 +246,7 @@
                         <li class="content_box swiper-slide" data-aos="fade-up">
                             <div class="thumb_block">
                                 <div class="inner">
-                                    <img src="/images/product/freetrial/kinder/img_step_01.png" alt="">
+                                    <img src="../../images/product/freetrial/kinder/img_step_01.png" alt="">
                                 </div>
                             </div>
                             <div class="info_block">
@@ -262,7 +262,7 @@
                         <li class="content_box swiper-slide" data-aos="fade-up">
                             <div class="thumb_block">
                                 <div class="inner">
-                                    <img src="/images/product/freetrial/kinder/img_step_02.png" alt="">
+                                    <img src="../../images/product/freetrial/kinder/img_step_02.png" alt="">
                                 </div>
                             </div>
                             <div class="info_block">
@@ -280,7 +280,7 @@
                         <li class="content_box swiper-slide" data-aos="fade-up">
                             <div class="thumb_block">
                                 <div class="inner">
-                                    <img src="/images/product/freetrial/kinder/img_step_03.png" alt="">
+                                    <img src="../../images/product/freetrial/kinder/img_step_03.png" alt="">
                                 </div>
                             </div>
                             <div class="info_block">
@@ -313,14 +313,14 @@
                     <ul class="list_block">
                         <li class="process_box" data-aos="fade-up">
                             <div class="thumb_block">
-                                <img src="/images/product/img_freetrial_kinder.png" alt="">
+                                <img src="../../images/product/img_freetrial_kinder.png" alt="">
                             </div>
                             <h6 class="title">무료 체험 신청</h6>
                         </li>
                         <li><i class="ico_arrow process"></i></li>
                         <li class="process_box" data-aos="fade-up" data-aos-delay="200">
                             <div class="thumb_block">
-                                <img src="/images/product/img_freetrial_delivery.png" alt="">
+                                <img src="../../images/product/img_freetrial_delivery.png" alt="">
                             </div>
                             <h6 class="title">무료 배송</h6>
                             <p class="desc">* 앱 설치 후 영상부터 즐겨보세요.</p>
@@ -329,7 +329,7 @@
                         <li><i class="ico_arrow process"></i></li>
                         <li class="process_box" data-aos="fade-up" data-aos-delay="300">
                             <div class="thumb_block">
-                                <img src="/images/product/img_freetrial_content.png" alt="">
+                                <img src="../../images/product/img_freetrial_content.png" alt="">
                             </div>
                             <h6 class="title">콘텐츠 체험</h6>
                         </li>
@@ -557,7 +557,7 @@
         <div class="fnb_btm_block">
             <div class="container d_flex m_column_reverse">
                 <div>
-                    <h2 class="f_logo m_d_none"><img src="/images/f_logo.png" alt="Egg School"></h2>
+                    <h2 class="f_logo m_d_none"><img src="../../images/f_logo.png" alt="Egg School"></h2>
                     <!--pc-->
                     <ul class="fnb_info_block m_d_none d_block">
                         <li class="fnb_info">
@@ -601,9 +601,9 @@
                         </ul>
                     </div>
                     <ul class="sns_link_block">
-                        <li class="sns_link"><a href="https://cafe.naver.com/eggschoolk" target="_blank"><img src="/images/icon/ico_sns_cafe.png" alt="네이버 카페"></a></li>
-                        <li class="sns_link"><a href="https://www.instagram.com/eggschool_k/" target="_blank"><img src="/images/icon/ico_sns_instar.png" alt="인스타그램"></a></li>
-                        <li class="sns_link"><a href="https://www.youtube.com/channel/UC6te0BNTwvi8DDXeROUlSIg" target="_blank"><img src="/images/icon/ico_sns_youtube.png" alt="유튜브"></a></li>
+                        <li class="sns_link"><a href="https://cafe.naver.com/eggschoolk" target="_blank"><img src="../../images/icon/ico_sns_cafe.png" alt="네이버 카페"></a></li>
+                        <li class="sns_link"><a href="https://www.instagram.com/eggschool_k/" target="_blank"><img src="../../images/icon/ico_sns_instar.png" alt="인스타그램"></a></li>
+                        <li class="sns_link"><a href="https://www.youtube.com/channel/UC6te0BNTwvi8DDXeROUlSIg" target="_blank"><img src="../../images/icon/ico_sns_youtube.png" alt="유튜브"></a></li>
                     </ul>
                 </div>
             </div>
