--- a/studyroom/guide/kinder.html
+++ b/studyroom/guide/kinder.html
@@ -38,7 +38,7 @@
 <div class="wrapper">
     <!--S:header-->
     <header class="header none_transparent">
-        <a href="/"><img src="/images/logo.png" alt="Egg School"></a>
+        <a href="/"><img src="../../images/logo.png" alt="Egg School"></a>
         <nav class="gnb_wrapper">
             <ul class="gnb_block">
                 <li class="gnb_link"><span class="gnb_text">Egg School</span>
@@ -89,7 +89,7 @@
     </header>
     <!--S:mobile-->
     <header class="m_header none_transparent">
-        <div class="logo"><a href="/"><img src="/images/logo.png" alt="Egg School"></a></div>
+        <div class="logo"><a href="/"><img src="../../images/logo.png" alt="Egg School"></a></div>
         <div class="m_menu_block">
             <div class="utill_menu_block">
                 <button type="button" onclick="redirectToAppStore()" class="utill_menu">앱 다운로드</button>
@@ -105,7 +105,7 @@
     <div class="m_nav_wrapper">
         <div class="nav_top d_flex align_center">
             <div class="login_block">
-                <img class="logo" src="/images/logo.png" alt="Egg School">
+                <img class="logo" src="../../images/logo.png" alt="Egg School">
                 <p class="login_txt"><a href="/login" class="font_600">로그인</a>해주세요</p>
             </div>
             <button class="btn_nav open" onclick="handleMobileNav(this)">
@@ -175,7 +175,7 @@
         <section class="guide_wrapper">
             <article class="cover_block">
                 <div class="thumb_block">
-                    <img src="/images/guide/kinder/img_top_guide_red.png" alt="">
+                    <img src="../../images/guide/kinder/img_top_guide_red.png" alt="">
                 </div>
                 <div class="inner">
                     <h4 class="greeting" data-aos="fade-up">
@@ -187,7 +187,7 @@
                         유치원 학습 가이드북
                     </h2>
                     <div class="thumb_block img_cover" data-aos="fade-up">
-                        <img src="/images/guide/kinder/char_guide_kinder.png" alt="">
+                        <img src="../../images/guide/kinder/char_guide_kinder.png" alt="">
                     </div>
                 </div>
             </article>
@@ -200,7 +200,7 @@
                     <em class="font_point">스토리북 4권 & 활동자료 4종</em>이 배송돼요.
                 </p>
                 <div class="thumb_block img_package" data-aos="fade-up">
-                    <img src="/images/guide/kinder/img_guide_package.png" alt="">
+                    <img src="../../images/guide/kinder/img_guide_package.png" alt="">
                 </div>
                 <p class="desc font_center" data-aos="fade-up">
                     <strong class="font_700">* 풀 세트 구매 시,</strong><br />
@@ -218,7 +218,7 @@
                     <li class="step_box" data-aos="fade-up">
                         <h6 class="num">01</h6>
                         <div class="thumb_block">
-                            <img src="/images/guide/img_eggschool_app.png" alt="">
+                            <img src="../../images/guide/img_eggschool_app.png" alt="">
                         </div>
                         <div class="info_block">
                             <p class="desc">
@@ -230,12 +230,12 @@
                             <ul class="app_link_block">
                                 <li>
                                     <button onclick="redirectToAppStore('android')">
-                                        <img src="/images/icon/ico_googlePlay.png" alt="구글플레이 다운로드"/>
+                                        <img src="../../images/icon/ico_googlePlay.png" alt="구글플레이 다운로드"/>
                                     </button>
                                 </li>
                                 <li>
                                     <button onclick="redirectToAppStore('ios')">
-                                        <img src="/images/icon/ico_appStore.png" alt="앱스토어 다운로드"/>
+                                        <img src="../../images/icon/ico_appStore.png" alt="앱스토어 다운로드"/>
                                     </button>
                                 </li>
                             </ul>
@@ -244,7 +244,7 @@
                     <li class="step_box" data-aos="fade-up">
                         <h6 class="num">02</h6>
                         <div class="thumb_block">
-                            <img src="/images/guide/img_app_login.png" alt="">
+                            <img src="../../images/guide/img_app_login.png" alt="">
                         </div>
                         <div class="info_block">
                             <p class="desc">
@@ -257,7 +257,7 @@
                     <li class="step_box" data-aos="fade-up">
                         <h6 class="num">03</h6>
                         <div class="thumb_block">
-                            <img src="/images/guide/kinder/img_app_main.png" alt="">
+                            <img src="../../images/guide/kinder/img_app_main.png" alt="">
                         </div>
                         <div class="info_block">
                             <p class="desc">
@@ -279,7 +279,7 @@
                     <li class="step_box" data-aos="fade-up">
                         <h6 class="num">01</h6>
                         <div class="thumb_block">
-                            <img src="/images/guide/kinder/img_step02_01.png" alt="">
+                            <img src="../../images/guide/kinder/img_step02_01.png" alt="">
                         </div>
                         <div class="info_block">
                             <h6 class="title">스토리북 읽기</h6>
@@ -293,7 +293,7 @@
                     <li class="step_box" data-aos="fade-up">
                         <h6 class="num">02</h6>
                         <div class="thumb_block">
-                            <img src="/images/guide/kinder/img_step02_02.png" alt="">
+                            <img src="../../images/guide/kinder/img_step02_02.png" alt="">
                         </div>
                         <div class="info_block">
                             <h6 class="title">영상 시청하기</h6>
@@ -306,7 +306,7 @@
                     <li class="step_box" data-aos="fade-up">
                         <h6 class="num">03</h6>
                         <div class="thumb_block">
-                            <img src="/images/guide/kinder/img_step02_03.png" alt="">
+                            <img src="../../images/guide/kinder/img_step02_03.png" alt="">
                         </div>
                         <div class="info_block">
                             <h6 class="title">활동자료로 놀기</h6>
@@ -320,7 +320,7 @@
                     <li class="step_box" data-aos="fade-up">
                         <h6 class="num">04</h6>
                         <div class="thumb_block">
-                            <img src="/images/guide/kinder/img_step02_04.png" alt="">
+                            <img src="../../images/guide/kinder/img_step02_04.png" alt="">
                         </div>
                         <div class="info_block">
                             <h6 class="title">에그스쿨 펜 이용하기</h6>
@@ -338,7 +338,7 @@
                     <li class="step_box" data-aos="fade-up">
                         <h6 class="num">05</h6>
                         <div class="thumb_block">
-                            <img src="/images/guide/kinder/img_step02_05.png" alt="">
+                            <img src="../../images/guide/kinder/img_step02_05.png" alt="">
                         </div>
                         <div class="info_block">
                             <h6 class="title">영어 섬취감 키우기 </h6>
@@ -364,7 +364,7 @@
                 <ul>
                     <li class="step_box" data-aos="fade-up">
                         <div class="thumb_block">
-                            <img src="/images/guide/kinder/img_step03_01.png" alt="">
+                            <img src="../../images/guide/kinder/img_step03_01.png" alt="">
                         </div>
                         <div class="info_block">
                             <p class="desc">
@@ -376,7 +376,7 @@
                     </li>
                     <li class="step_box" data-aos="fade-up">
                         <div class="thumb_block">
-                            <img src="/images/guide/kinder/img_step03_02.png" alt="">
+                            <img src="../../images/guide/kinder/img_step03_02.png" alt="">
                         </div>
                         <div class="info_block">
                             <p class="desc">
@@ -388,7 +388,7 @@
                     </li>
                     <li class="step_box" data-aos="fade-up">
                         <div class="thumb_block">
-                            <img src="/images/guide/kinder/img_step03_03.png" alt="">
+                            <img src="../../images/guide/kinder/img_step03_03.png" alt="">
                         </div>
                         <div class="info_block">
                             <p class="desc">
@@ -425,7 +425,7 @@
         <div class="fnb_btm_block">
             <div class="container d_flex m_column_reverse">
                 <div>
-                    <h2 class="f_logo m_d_none"><img src="/images/f_logo.png" alt="Egg School"></h2>
+                    <h2 class="f_logo m_d_none"><img src="../../images/f_logo.png" alt="Egg School"></h2>
                     <!--pc-->
                     <ul class="fnb_info_block m_d_none d_block">
                         <li class="fnb_info">
@@ -469,9 +469,9 @@
                         </ul>
                     </div>
                     <ul class="sns_link_block">
-                        <li class="sns_link"><a href="https://cafe.naver.com/eggschoolk" target="_blank"><img src="/images/icon/ico_sns_cafe.png" alt="네이버 카페"></a></li>
-                        <li class="sns_link"><a href="https://www.instagram.com/eggschool_k/" target="_blank"><img src="/images/icon/ico_sns_instar.png" alt="인스타그램"></a></li>
-                        <li class="sns_link"><a href="https://www.youtube.com/channel/UC6te0BNTwvi8DDXeROUlSIg" target="_blank"><img src="/images/icon/ico_sns_youtube.png" alt="유튜브"></a></li>
+                        <li class="sns_link"><a href="https://cafe.naver.com/eggschoolk" target="_blank"><img src="../../images/icon/ico_sns_cafe.png" alt="네이버 카페"></a></li>
+                        <li class="sns_link"><a href="https://www.instagram.com/eggschool_k/" target="_blank"><img src="../../images/icon/ico_sns_instar.png" alt="인스타그램"></a></li>
+                        <li class="sns_link"><a href="https://www.youtube.com/channel/UC6te0BNTwvi8DDXeROUlSIg" target="_blank"><img src="../../images/icon/ico_sns_youtube.png" alt="유튜브"></a></li>
                     </ul>
                 </div>
             </div>
