--- a/product/freetrial/element.html
+++ b/product/freetrial/element.html
@@ -11,7 +11,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
     <link rel="stylesheet" as="style" crossorigin href="https://cdn.jsdelivr.net/gh/orioncactus/pretendard@v1.3.9/dist/web/static/pretendard.min.css" />
-    <link rel="stylesheet" href="/css/reset.css">
+    <link rel="stylesheet" href="./../../css/reset.css">
     <!--S: Swiper CDN-->
     <link
             rel="stylesheet"
@@ -25,47 +25,47 @@
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
     <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
     <!--E:fonts-->
-    <link rel="stylesheet" href="/css/common.css">
-    <link rel="stylesheet" href="/css/main.css">
-    <link rel="stylesheet" href="/css/modal.css">
-    <link rel="stylesheet" href="/css/product.css">
-    <script src="/js/modal.js"></script>
-    <script src="/js/common.js"></script>
-    <script src="/js/product.js"></script>
+    <link rel="stylesheet" href="./../../css/common.css">
+    <link rel="stylesheet" href="./../../css/main.css">
+    <link rel="stylesheet" href="./../../css/modal.css">
+    <link rel="stylesheet" href="./../../css/product.css">
+    <script src="./../../js/modal.js"></script>
+    <script src="./../../js/common.js"></script>
+    <script src="./../../js/product.js"></script>
 </head>
 <body>
 <div class="wrapper">
     <!--S:header-->
     <header class="header font_black">
-        <a href="/"><img src="./../images/logo.png" alt="Egg School"></a>
+        <a href="./../../"><img src="./../images/logo.png" alt="Egg School"></a>
         <nav class="gnb_wrapper">
             <ul class="gnb_block">
                 <li class="gnb_link"><span class="gnb_text">Egg School</span>
                     <ul class="lnb_block">
-                        <li class="lnb_link"><a href="/eggshool/story">회사소개</a></li>
-                        <li class="lnb_link"><a href="/eggshool/system">시스템</a></li>
-                        <li class="lnb_link"><a href="/eggshool/curriculum">커리큘럼</a></li>
+                        <li class="lnb_link"><a href="./../../eggshool/story">회사소개</a></li>
+                        <li class="lnb_link"><a href="./../../eggshool/system">시스템</a></li>
+                        <li class="lnb_link"><a href="./../../eggshool/curriculum">커리큘럼</a></li>
                     </ul>
                 </li>
                 <li class="gnb_link"><span class="gnb_text">Product</span>
                     <ul class="lnb_block">
-                        <li class="lnb_link"><a href="/product/kinder">유치원</a></li>
-                        <li class="lnb_link"><a href="/product/element">초등</a></li>
-                        <li class="lnb_link"><a href="/product/library">도서관</a></li>
-                        <li class="lnb_link"><a href="/product/freetrial">무료체험신청</a></li>
+                        <li class="lnb_link"><a href="./../../product/kinder">유치원</a></li>
+                        <li class="lnb_link"><a href="./../../product/element">초등</a></li>
+                        <li class="lnb_link"><a href="./../../product/library">도서관</a></li>
+                        <li class="lnb_link"><a href="./../../product/freetrial">무료체험신청</a></li>
                     </ul>
                 </li>
                 <li class="gnb_link"><span class="gnb_text">Study Room</span>
                     <ul class="lnb_block">
-                        <li class="lnb_link"><a href="/studyroom/guide">학습가이드</a></li>
-                        <li class="lnb_link"><a href="/studyroom/guide/remotesupport">PC원격지원</a></li>
+                        <li class="lnb_link"><a href="./../../studyroom/guide">학습가이드</a></li>
+                        <li class="lnb_link"><a href="./../../studyroom/guide/remotesupport">PC원격지원</a></li>
                     </ul>
                 </li>
                 <li class="gnb_link"><span class="gnb_text">Community</span>
                     <ul class="lnb_block">
-                        <li class="lnb_link"><a href="/community/notice">공지사항</a></li>
-                        <li class="lnb_link"><a href="/community/event">이벤트</a></li>
-                        <li class="lnb_link"><a href="/community/faq">FAQ</a></li>
+                        <li class="lnb_link"><a href="./../../community/notice">공지사항</a></li>
+                        <li class="lnb_link"><a href="./../../community/event">이벤트</a></li>
+                        <li class="lnb_link"><a href="./../../community/faq">FAQ</a></li>
                     </ul>
                 </li>
             </ul>
@@ -75,20 +75,20 @@
             <button type="button" class="utill_menu" onclick="toggleMySchool()">My School
                 <ul class="mypage_link_block">
                     <li class="mypage_link logout">로그아웃</li>
-                    <li class="mypage_link"><a href="/myschool/userinfo">회원정보</a></li>
-                    <li class="mypage_link"><a href="/myschool/studyinfo">학습정보</a></li>
-                    <li class="mypage_link"><a href="/myschool/appextend">앱 구독연장</a></li>
-                    <li class="mypage_link"><a href="/myschool/paylist">결제내역</a></li>
-                    <li class="mypage_link"><a href="/myschool/delivery">배송내역</a></li>
-                    <li class="mypage_link"><a href="/myschool/dataroom">자료실</a></li>
-                    <li class="mypage_link"><a href="/myschool/qna">1:1 문의내역</a></li>
+                    <li class="mypage_link"><a href="./../../myschool/userinfo">회원정보</a></li>
+                    <li class="mypage_link"><a href="./../../myschool/studyinfo">학습정보</a></li>
+                    <li class="mypage_link"><a href="./../../myschool/appextend">앱 구독연장</a></li>
+                    <li class="mypage_link"><a href="./../../myschool/paylist">결제내역</a></li>
+                    <li class="mypage_link"><a href="./../../myschool/delivery">배송내역</a></li>
+                    <li class="mypage_link"><a href="./../../myschool/dataroom">자료실</a></li>
+                    <li class="mypage_link"><a href="./../../myschool/qna">1:1 문의내역</a></li>
                 </ul>
             </button>
         </div>
     </header>
     <!--S:mobile-->
     <header class="m_header font_black">
-        <div class="logo"><a href="/"><img src="./../images/logo.png" alt="Egg School"></a></div>
+        <div class="logo"><a href="./../../"><img src="./../images/logo.png" alt="Egg School"></a></div>
         <div class="m_menu_block">
             <div class="utill_menu_block">
                 <button type="button" onclick="redirectToAppStore()" class="utill_menu">앱 다운로드</button>
@@ -105,7 +105,7 @@
         <div class="nav_top d_flex align_center">
             <div class="login_block">
                 <img class="logo" src="./../images/logo.png" alt="Egg School">
-                <p class="login_txt"><a href="/login" class="font_600">로그인</a>해주세요</p>
+                <p class="login_txt"><a href="./../../login" class="font_600">로그인</a>해주세요</p>
             </div>
             <button class="btn_nav open" onclick="handleMobileNav(this)">
                 <span></span>
