--- a/studyroom/guide/element.html
+++ b/studyroom/guide/element.html
@@ -29,6 +29,7 @@
     <link rel="stylesheet" href="./../../css/main.css">
     <link rel="stylesheet" href="./../../css/modal.css">
     <link rel="stylesheet" href="./../../css/product.css">
+    <link rel="stylesheet" href="./../../css/guide.css">
     <script src="./../../js/modal.js"></script>
     <script src="./../../js/common.js"></script>
     <script src="./../../js/product.js"></script>
@@ -165,8 +166,8 @@
         <section class="product_link_wrapper">
             <ul class="product_link_block">
                 <li class="product_link kinder"><a href="./kinder.html">유치원</a></li>
-                <li class="product_link element"><a href="./element.html">초등</a></li>
-                <li class="product_link library active"><a href="./library.html">도서관</a></li>
+                <li class="product_link element active"><a href="./element.html">초등</a></li>
+                <li class="product_link library"><a href="./library.html">도서관</a></li>
             </ul>
         </section>
         <!--E:link_block-->
