--- a/studyroom/guide/library.html
+++ b/studyroom/guide/library.html
@@ -29,6 +29,7 @@
     <link rel="stylesheet" href="./../../css/main.css">
     <link rel="stylesheet" href="./../../css/modal.css">
     <link rel="stylesheet" href="./../../css/product.css">
+    <link rel="stylesheet" href="./../../css/guide.css">
     <script src="./../../js/modal.js"></script>
     <script src="./../../js/common.js"></script>
     <script src="./../../js/product.js"></script>
